--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Favorite Figthers</h1>
+    <h1>Favorite UFC Figthers</h1>
     <ul class="rappers">
     <% for(let i=0; i < info.length; i++) {%>
         <li class="rapper">
