--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Favorite UFC Fighters</title>
 </head>
 <body>
     <h1>Favorite UFC Figthers</h1>
